# Ascii-Design

./: CMakeLists.txt  COPYING.TXT  INSTALL.TXT  README.TXT  README.md  ascii-design.appdata.xml  ascii-design.pro  ascii-design.sln  ascii-design.vcxproj  ascii-design_win32-Installer.nsi  infodialog.ui  res.qrc  res.rc  resource.h  winicon.rc
icon/: ascii-design.desktop
other/: ascii-design.desktop
src/: dialoginfoimpl.cpp  dialoginfoimpl.h  dialogoptionsimpl.cpp  dialogoptionsimpl.h  figletfonts.cpp  figletfonts.h  figletmanager.cpp  figletmanager.h  main.cpp  mainwindowimpl.cpp  mainwindowimpl.h  options.cpp  options.h
ui/: infodialog.ui  mainwindow.ui  optionsman.ui
